--- a/portfolio-app/src/app/app.component.css
+++ b/portfolio-app/src/app/app.component.css
@@ -1,16 +1,4 @@
-#section1 {
-  padding-left: 50px;
-  padding-top: 50px;
-  height: 100vh;
-  color: #fff;
-  background-image: url(../assets/chris-holgersson-249309.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 20% 20%;
-}
-
-/* ui-scrollfix condition fires */
-.topBar.ui-scrollfix {
+.topBar {
   position: fixed;
   top: 0;
   width: 100%;
@@ -23,8 +11,22 @@
   filter: brightness(0) invert(1);
 }
 
+.changeFilter {
+  filter: none;
+}
+
+.menuPanel {
+  position: absolute;
+  right: 0;
+  width: 350px;
+  height: 100%;
+  background-color: white;
+  opacity: 0.5;
+}
+
 .menuButton {
   float: right;
+  z-index: 999;
   padding-right: 50px;
   padding-top: 50px;
   display: inline-block;
@@ -32,32 +34,65 @@
 }
 
 .bar1, .bar2, .bar3 {
-  width: 35px;
-  height: 5px;
-  background-color: #454545;
-  margin: 6px 0;
-  transition: 0.4s;
+  width: 42px;
+  height: 6px;
   border-radius: 3px;
+  background-color: rgb(80, 80, 80);
+  margin: 6px 0;
+  -webkit-transition-duration: 0.4s;
+  transition: 0.4s;
 }
 
 .change .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-  transform: rotate(-45deg) translate(-9px, 6px);
+  /*-webkit-transform: rotate(-45deg) translate(-9px, 6.6px);
+  transform: rotate(-45deg) translate(-9px, 6.6px);*/
+  -webkit-transform: rotate(-45deg) translate(-8.5px, 8.5px);
+  transform: rotate(-45deg) translate(-8.5px, 8.5px);
 }
 
 .change .bar2 {opacity: 0;}
 
 .change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px);
-  transform: rotate(45deg) translate(-8px, -8px);
+  -webkit-transform: rotate(45deg) translate(-8.5px, -8.5px);
+  transform: rotate(45deg) translate(-8.5px, -8.5px);
 }
 
+
+#section1 {
+  padding-left: 50px;
+  padding-top: 50px;
+  height: 100vh;
+  color: #fff;
+  background-image: url(../assets/chris-holgersson-249309.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 20% 20%;
+}
+#section1 .row {
+  margin: 30vh 120px auto 100px;
+}
+#section1 p {
+  padding-left: 10px;
+  font-size: 26px;
+  letter-spacing: 6px;
+  line-height: 1.8;
+  font-family: "Avenir Next", sans-serif !important;
+  /*background-color: rgba(100, 100, 100, 0.3);*/
+}
+
+h1 {
+  margin-top: 120px;
+  margin-left: 120px;
+  font-size: 50px;
+  letter-spacing: 10px;
+  font-family: "Avenir Next", sans-serif !important;
+}
 
 #section2 {
   padding-left: 50px;
   padding-top: 50px;
   height: 100vh;
-  color: #000;
+  color: rgb(51, 51, 51);
   background-color: #fff;
 }
 
@@ -65,6 +100,6 @@
   padding-left: 50px;
   padding-top: 50px;
   height: 100vh;
-  color: #fff;
-  background-color: #ff9800;
+  color: rgb(51, 51, 51);
+  background-color: rgb(242, 242, 242);
 }
