--- a/portfolio-app/src/app/app.component.html
+++ b/portfolio-app/src/app/app.component.html
@@ -1,25 +1,31 @@
-<div ui-scrollfix="+100" class="topBar ui-scrollfix">
+<div class="topBar">
   <img class = "logoImg" [src]="logoPath">
 
   <div class="menuButton" onclick="menuFunction(this)">
     <div class="bar1"></div>
     <div class="bar2"></div>
     <div class="bar3"></div>
+    <div class="clickEffect"></div>
   </div>
 </div>
 
-<div id="section1" class="container-fluid">
+<div class="menuClosed"></div>
 
+<div id="section1" class="container-fluid">
+  <div class="row">
+    <div class="col-md-8">
+      <p>Hi,</p>
+      <p>I’m Ryan Fan, Computer Science major Junior studying at Purdue
+        University. Interested in User Experience Design, Human Computer
+        Interaction, Software Engineering and iOS Development.</p>
+    </div>
+  </div>
 </div>
 
 <div id="section2" class="container-fluid">
-  <h1>Section 2</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <h1>Projects & Designs</h1>
 </div>
 
 <div id="section3" class="container-fluid">
-  <h1>Section 3</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <h1>Contact</h1>
 </div>
