--- a/portfolio-app/src/app/app.component.css
+++ b/portfolio-app/src/app/app.component.css
@@ -2,6 +2,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 5;
 }
 
 .logoImg {
@@ -11,50 +12,88 @@
   filter: brightness(0) invert(1);
 }
 
-.changeFilter {
-  filter: none;
-}
-
-.menuPanel {
-  position: absolute;
-  right: 0;
-  width: 350px;
-  height: 100%;
-  background-color: white;
-  opacity: 0.5;
-}
+.changeFilter { filter: none; }
 
 .menuButton {
   float: right;
-  z-index: 999;
   padding-right: 50px;
-  padding-top: 50px;
+  padding-top: 55px;
   display: inline-block;
   cursor: pointer;
 }
 
 .bar1, .bar2, .bar3 {
   width: 42px;
-  height: 6px;
+  height: 5px;
   border-radius: 3px;
   background-color: rgb(80, 80, 80);
-  margin: 6px 0;
+  margin: 5px 0;
   -webkit-transition-duration: 0.4s;
   transition: 0.4s;
 }
 
 .change .bar1 {
-  /*-webkit-transform: rotate(-45deg) translate(-9px, 6.6px);
-  transform: rotate(-45deg) translate(-9px, 6.6px);*/
-  -webkit-transform: rotate(-45deg) translate(-8.5px, 8.5px);
-  transform: rotate(-45deg) translate(-8.5px, 8.5px);
+  -webkit-transform: rotate(-45deg) translate(-7px, 7px);
+  transform: rotate(-45deg) translate(-7px, 7px);
 }
 
-.change .bar2 {opacity: 0;}
+.change .bar2 { opacity: 0; }
 
 .change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8.5px, -8.5px);
-  transform: rotate(45deg) translate(-8.5px, -8.5px);
+  -webkit-transform: rotate(45deg) translate(-7px, -7px);
+  transform: rotate(45deg) translate(-7px, -7px);
+}
+
+.menuClosed {
+  position: fixed;
+  z-index: 0;
+  right: 0;
+  width: 0px;
+  height: 100%;
+  -webkit-transition-duration: 0.4s;
+  transition: 0.4s;
+}
+
+.menuPanel {
+  position: fixed;
+  z-index: 0;
+  right: 0;
+  width: 400px;
+  height: 100%;
+  background-color: white;
+  box-shadow: -5px 0px 20px rgba(130, 130, 130, 0.6);
+}
+
+.menuClosed h1, .menuPanel h1 {
+  padding-left: 110px;
+  margin-top: 140px;
+  margin-bottom: 50px;
+  font-size: 32px;
+  letter-spacing: 8px;
+  font-family: "Avenir Next", sans-serif !important;
+}
+
+  /*background: linear-gradient(to right, #996CFD, #FF6287);*/
+
+a.button {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+  display: block;
+  width: 400px;
+  color: inherit;
+  text-decoration: none !important;
+  font-size: 26px;
+  letter-spacing: 7px;
+  font-family: "Avenir Next", sans-serif !important;
+  -webkit-transition-duration: all 0.3s;
+  transition: all 0.3s;
+}
+
+a.button:hover {
+  color: white;
+  background-color: rgb(93, 146, 249);
+  box-shadow: 0px 5px 10px rgba(0,0,0,0.3);
 }
 
 
@@ -80,7 +119,7 @@
   /*background-color: rgba(100, 100, 100, 0.3);*/
 }
 
-h1 {
+#section2 h1, #section3 h1 {
   margin-top: 120px;
   margin-left: 120px;
   font-size: 50px;
