Add 2 projects on second page

--- a/portfolio-app/src/app/app.component.html
+++ b/portfolio-app/src/app/app.component.html
@@ -43,10 +43,9 @@
   <div class="showroomContainer">
     <img class="showroomSlides"
       [src]="imgPath1">
-
-    <!-- <div class="overlay"> -->
-    <p>Tr!plan</p>
-    <!-- </div> -->
+    <img class="showroomSlides"
+      [src]="imgPath2">
+    <p>meetzam</p>
 
     <div class="showroomIndicator">
       <div class="leftButton"
