--- a/portfolio-app/src/app/app.component.css
+++ b/portfolio-app/src/app/app.component.css
@@ -187,9 +187,9 @@
 }*/
 .showroomContainer p {
   position: absolute;
-  bottom: 0;
+  top: 0;
   margin-left: 130px;
-  margin-bottom: 100px;
+  margin-top: 200px;
   padding: 12px 30px;
   font-size: 26px;
   letter-spacing: 6px;
@@ -224,7 +224,7 @@
   display: inline;
   cursor: pointer;
   font-size: 25px;
-  color: white;
+  color: rgb(73,73,73);
 }
 
 #section3 {
