--- a/portfolio-app/src/app/app.component.html
+++ b/portfolio-app/src/app/app.component.html
@@ -48,12 +48,10 @@
     <p id="projectName">meetzam</p>
 
     <div class="showroomIndicator">
+      <!-- <span class="bar1"></span>
+      <span class="bar2"></span> -->
       <div class="leftButton unselectable"
-        (click)="changeSlides(-1)">
-        &#10094;
-        <!-- <span class="bar1"></span>
-        <span class="bar2"></span> -->
-      </div>
+        (click)="changeSlides(-1)">&#10094;</div>
       <div class="rightButton unselectable"
         (click)="changeSlides(1)">&#10095;</div>
     </div>
