--- a/portfolio-app/src/app/app.component.html
+++ b/portfolio-app/src/app/app.component.html
@@ -28,7 +28,11 @@
   </button>
 </div>
 
-<div id="section1" class="container-fluid">
+<div id="section1"
+  class="container-fluid"
+  [lazyLoad]="backgroundImgPath"
+  [offset]="0"
+  (onLoad)="backgroundLoadingComplete()">
   <div class="row">
     <div class="col-md-8">
       <p>Hi,</p>
@@ -42,9 +46,17 @@
 <div id="section2" class="container-fluid">
   <div class="showroomContainer">
     <img class="showroomSlides"
-      [src]="imgPath1">
+      [defaultImage]="defaultImage"
+      [lazyLoad]="imgPath1"
+      [scrollObservable]="scrollAndSearch$"
+      (onLoad)="loadingComplete()">
+
     <img class="showroomSlides"
-      [src]="imgPath2">
+      [defaultImage]="defaultImage"
+      [lazyLoad]="imgPath2"
+      [scrollObservable]="scrollAndSearch$"
+      (onLoad)="loadingComplete()">
+
     <a id="projectName" class="unselectable"
     (click)="openProjectDetail()"></a>
 
