--- a/portfolio-app/src/app/app.component.css
+++ b/portfolio-app/src/app/app.component.css
@@ -93,13 +93,11 @@
   -webkit-transition-duration: all 0.3s;
   transition: all 0.3s;
 }
-
 .singleButton:hover {
   color: white;
   background-color: rgb(93, 146, 249);
   box-shadow: 0px 5px 10px rgba(0,0,0,0.3);
 }
-
 .singleButton:focus {outline:0;}
 
 
@@ -116,17 +114,18 @@
 #section1 .row {
   margin: 30vh 120px auto 100px;
 }
-#section1 p {
+.section1Text {
   padding-left: 10px;
   font-size: 26px;
   letter-spacing: 6px;
   line-height: 1.8;
   font-family: 'Montserrat', sans-serif !important;
   font-weight: 300;
+  visibility: hidden;
   /*background-color: rgba(100, 100, 100, 0.3);*/
 }
 @media only screen and (min-width: 850px) and (max-width: 1365px) {
-  #section1 p {
+  .section1Text {
     font-size: 25px;
     letter-spacing: 5px;
     line-height: 1.7;
@@ -134,7 +133,7 @@
 }
 @media only screen and (min-width: 630px) and (max-width: 850px) {
   #section1 .row { margin: 25vh 120px auto 100px; }
-  #section1 p {
+  .section1Text {
     font-size: 22px;
     letter-spacing: 4px;
     line-height: 1.6;
@@ -142,7 +141,7 @@
 }
 @media only screen and (min-width: 540px) and (max-width: 630px) {
   #section1 .row { margin: 23vh 100px auto 80px; }
-  #section1 p {
+  .section1Text {
     padding-left: 10px;
     font-size: 18px;
     letter-spacing: 4px;
@@ -151,7 +150,7 @@
 }
 @media only screen and (max-width: 540px) {
   #section1 .row { margin: 20vh 20px auto 0px; }
-  #section1 p {
+  .section1Text {
     padding-left: 10px;
     font-size: 18px;
     letter-spacing: 3px;
@@ -196,9 +195,14 @@
   transition: all 0.4s;
   -webkit-animation: fadeIn 0.7s;
   animation: fadeIn 0.7s;
+  background-image: url(../assets/img/91.svg);
+  background-repeat: no-repeat;
+  background-size: none;
+  background-position: 50% 50%;
 }
 .slidesLoaded {
   object-fit: cover !important;
+  background: none !important
 }
 @-webkit-keyframes fadeIn {
   from { opacity: 0; }
@@ -228,8 +232,8 @@
   cursor: pointer;
   font-size: 26px;
   color: rgb(73,73,73);
-  -webkit-transition: all 0.15s;
-  transition: all 0.15s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 .leftButton:hover, .rightButton:hover {
   -webkit-transform: scale(1.5, 1.5);
@@ -243,50 +247,95 @@
 }
 .projectDetails p {
   position: absolute;
-  color: grey;
+  color: rgb(51, 51, 51);
+  padding: 50px 60px;
+  font-size: 24px;
+  letter-spacing: 5px;
+  line-height: 1.6;
+  font-family: 'Montserrat', sans-serif !important;
+  font-weight: 300;
+  visibility: hidden;
+}
+@media only screen and (min-width: 1030px) and (max-width: 1320px) {
+  .projectDetails p {
+    font-size: 22px;
+    letter-spacing: 5px;
+    line-height: 1.5;
+  }
+}
+@media only screen and (min-width: 720px) and (max-width: 1030px) {
+  .projectDetails p {
+    font-size: 20px;
+    letter-spacing: 4px;
+    line-height: 1.4;
+  }
+}
+@media only screen and (min-width: 535px) and (max-width: 720px) {
+  .projectDetails p {
+    font-size: 18px;
+    letter-spacing: 3px;
+    line-height: 1.3;
+  }
+}
+@media only screen and (min-width: 450px) and (max-width: 535px) {
+  .projectDetails p {
+    font-size: 16px;
+    letter-spacing: 1px;
+    line-height: 1.1;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .projectDetails p {
+    font-size: 16px;
+    letter-spacing: 1px;
+    line-height: 1;
+  }
+}
+@media only screen and (max-height: 780px) {
+  .projectDetails p {
+    padding-top: 3.5vh;
+  }
 }
 
-
 #section3 {
-  padding-left: 50px;
-  padding-top: 50px;
   height: 100vh;
   color: rgb(51, 51, 51);
   background-color: rgb(242, 242, 242);
 }
 #section3 h1 {
-  margin-top: 80px;
-  margin-left: 120px;
-  font-size: 45px;
-  letter-spacing: 10px;
+  margin-top: 130px;
+  margin-left: 170px;
+  margin-bottom: 12vmin;
+  font-size: 5vmin;
+  letter-spacing: 0.8vmin;
   font-family: 'Montserrat', sans-serif !important;
   font-weight: 500;
 }
 #section3 p {
-  margin-left: 130px;
-  margin-bottom: 50px;
-  font-size: 25px;
-  letter-spacing: 6px;
+  margin-left: 180px;
+  margin-bottom: 5vmin;
+  font-size: 2.5vmin;
+  letter-spacing: 0.7vmin;
   line-height: 1.6;
   font-family: 'Montserrat', sans-serif !important;
   font-weight: 300;
 }
 #section3 h2 {
-  margin-left: 130px;
-  margin-top: 120px;
-  font-size: 30px;
-  letter-spacing: 6px;
+  margin-left: 180px;
+  margin-top: 12vmin;
+  font-size: 3vmin;
+  letter-spacing: 0.7vmin;
   line-height: 1.6;
   font-family: 'Montserrat', sans-serif !important;
   font-weight: 400;
 }
 
 .shareButton {
-  margin-top: 30px;
+  margin-top: 3vmin;
   position: relative;
   display: inline-block;
-  width: 120px;
-  height: 120px;
+  width: 12vmin;
+  height: 12vmin;
   background-color: #fff;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   -webkit-transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -307,8 +356,8 @@
 }
 
 .shareButton:hover {
-  -webkit-transform: scale(1.05, 1.05);
-  transform: scale(1.05, 1.05);
+  -webkit-transform: scale(1.2, 1.2);
+  transform: scale(1.2, 1.2);
 }
 
 .shareButton:hover::after {
@@ -316,19 +365,59 @@
 }
 
 .shareButton.linkedin {
-  margin-left: 130px;
-  background-size: 65px 65px;
+  background-size: 6.5vmin 6.5vmin;
   background-position: center;
   background-image: url('https://image.flaticon.com/icons/svg/61/61109.svg');
   background-repeat: no-repeat;
 }
 
 .shareButton.github {
-  margin-left: 60px;
-  background-size: 72px 72px;
+  margin-left: 6vmin;
+  background-size: 7.2vmin 7.2vmin;
   background-position: center;
   background-image: url('https://image.flaticon.com/icons/png/512/25/25231.png');
   background-repeat: no-repeat;
+}
+.marginT { margin-left: 180px; }
+
+@media only screen and (max-width: 700px) {
+  .logoImg {
+    zoom: 0.8;
+    -moz-transform: scale(0.8);
+  }
+  .menuPanel {
+    width: 100vw;
+  }
+  .menuClosed h1, .menuPanel h1 {
+    margin-left: auto !important;
+  }
+  .singleButton { width: 100vw; }
+  .menuButton {
+    zoom: 0.8;
+    -moz-transform: scale(0.8);
+  }
+  #projectName {
+    margin: 200px auto auto 20vmin !important;
+  }
+  #section3 h1 {
+    margin-left: 20vmin !important;
+    margin-right: 10vmin;
+  }
+  .marginT {
+    margin-left: 20vmin !important;
+    margin-right: 10vmin;
+  }
+  .shareButton.linkedin {
+    margin-right: 3vmin !important;
+  }
+  .shareButton.github {
+    margin-left: 3vmin !important;
+  }
+}
+@media only screen and (max-height: 690px) {
+  .menuClosed h1, .menuPanel h1 {
+    margin-top: 130px;
+  }
 }
 
 .unselectable {
@@ -343,3 +432,4 @@
   filter: brightness(70%);
   -webkit-filter: brightness(70%);
 }
+.ulineLink { text-decoration: underline; }
