--- a/portfolio-app/src/app/app.component.css
+++ b/portfolio-app/src/app/app.component.css
@@ -1,11 +1,7 @@
-.topBar {
+.logoImg {
   position: fixed;
   top: 0;
-  width: 100%;
   z-index: 10;
-}
-
-.logoImg {
   padding-left: 50px;
   padding-top: 50px;
   height: 100px;
@@ -16,7 +12,10 @@
 .changeFilter { filter: none; }
 
 .menuButton {
-  float: right;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  right: 0;
   padding-right: 50px;
   padding-top: 55px;
   display: inline-block;
@@ -186,6 +185,12 @@
   font-weight: 300;
   cursor: pointer;
   text-decoration: none;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+#projectName:hover {
+  -webkit-transform: scale(1.05, 1.05);
+  transform: scale(1.05, 1.05);
 }
 .showroomSlides {
   width: 100vw;
@@ -303,7 +308,7 @@
   background-color: rgb(242, 242, 242);
 }
 #section3 h1 {
-  margin-top: 130px;
+  margin-top: 140px;
   margin-left: 170px;
   margin-bottom: 12vmin;
   font-size: 5vmin;
@@ -432,4 +437,8 @@
   filter: brightness(70%);
   -webkit-filter: brightness(70%);
 }
-.ulineLink { text-decoration: underline; }
+.ulineLink {
+  text-decoration: none;
+  border-bottom: 2px solid currentColor;
+  padding-bottom: 2px;
+}
